--- a/imitation_learning_training.ipynb
+++ b/imitation_learning_training.ipynb
@@ -1658,7 +1658,7 @@
    "outputs": [],
    "source": [
     "# Load the mountain model\n",
-    "model_name_mountain = 'trained_model_offroad.h5'\n",
+    "model_name_mountain = 'trained_model_mountain.h5'\n",
     "model_mountain = load_model(model_name_mountain)\n",
     "\n",
     "# Prepare the TensorFlow Lite converter for weight quantization\n",
